<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2ad81"
    android:gravity="center"
    >


    <LinearLayout
        android:layout_weight="7"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_height="match_parent"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/result"
                android:layout_height="25pt"
                android:textSize="14pt"
                android:padding="4pt"
                android:gravity="right"
                android:text="@string/result_default"
                />
            <View
                android:layout_height="2dip"
                android:background="#FF909090" />

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="5pt"
                android:id="@+id/tableRow1"
                android:paddingLeft="4pt"
                android:paddingRight="4pt"
                tools:ignore="DuplicateIds">
                <Button
                    android:background="#dc8f3c"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/buttonSeven"
                    android:textSize="14pt"
                    android:id="@+id/button7"
                    android:layout_width="25pt"
                    android:layout_height="25pt"
                    android:layout_weight="1"
                    android:onClick="handleClick" />
                <Button
                    android:background="#dc8f3c"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/buttonEight"
                    android:textSize="14pt"
                    android:id="@+id/button8"
                    android:layout_height="25pt"
                    android:layout_width="25pt"
                    android:layout_weight="1"
                    android:onClick="handleClick" />
                <Button
                    android:background="#dc8f3c"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/buttonNine"
                    android:textSize="14pt"
                    android:id="@+id/button9"
                    android:layout_width="25pt"
                    android:layout_height="25pt"
                    android:layout_weight="1"
                    android:onClick="handleClick" />
                <Button
                    android:background="#f17f05"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/buttonDivide"
                    android:textSize="14pt"
                    android:id="@+id/buttonDivide"
                    android:layout_width="25pt"
                    android:layout_height="25pt"
                    android:layout_weight="1"
                    android:onClick="handleClick" />
            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="1pt"
                android:id="@+id/tableRow1"
                android:paddingLeft="4pt"
                android:paddingRight="4pt"
                tools:ignore="DuplicateIds">
                <Button
                    android:background="#dc8f3c"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/buttonFour"
                    android:textSize="14pt"
                    android:id="@+id/button4"
                    android:layout_width="25pt"
                    android:layout_height="25pt"
                    android:layout_weight="1"
                    android:onClick="handleClick" />
                <Button
                    android:background="#dc8f3c"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/buttonFive"
                    android:textSize="14pt"
                    android:id="@+id/button5"
                    android:layout_height="25pt"
                    android:layout_width="25pt"
                    android:layout_weight="1"
                    android:onClick="handleClick" />
                <Button
                    android:background="#dc8f3c"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/buttonSix"
                    android:textSize="14pt"
                    android:id="@+id/button6"
                    android:layout_width="25pt"
                    android:layout_height="25pt"
                    android:layout_weight="1"
                    android:onClick="handleClick" />
                <Button
                    android:background="#f17f05"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/buttonMutiply"
                    android:textSize="14pt"
                    android:id="@+id/buttonMultiply"
                    android:layout_width="25pt"
                    android:layout_height="25pt"
                    android:layout_weight="1"
                    android:onClick="handleClick" />
            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="1pt"
                android:id="@+id/tableRow2"
                android:paddingLeft="4pt"
                android:paddingRight="4pt">
                <Button
                    android:background="#dc8f3c"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/buttonOne"
                    android:textSize="14pt"
                    android:id="@+id/button1"
                    android:layout_width="25pt"
                    android:layout_height="25pt"
                    android:layout_weight="1"
                    android:onClick="handleClick" />
                <Button
                    android:background="#dc8f3c"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/buttonTwo"
                    android:textSize="14pt"
                    android:id="@+id/button2"
                    android:layout_height="25pt"
                    android:layout_width="25pt"
                    android:layout_weight="1"
                    android:onClick="handleClick" />
                <Button
                    android:background="#dc8f3c"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/buttonThree"
                    android:textSize="14pt"
                    android:id="@+id/button3"
                    android:layout_width="25pt"
                    android:layout_height="25pt"
                    android:layout_weight="1"
                    android:onClick="handleClick" />
                <Button
                    android:background="#f17f05"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/buttonMinus"
                    android:textSize="14pt"
                    android:id="@+id/buttonMinus"
                    android:layout_width="25pt"
                    android:layout_height="25pt"
                    android:layout_weight="1"
                    android:onClick="handleClick" />
            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="1pt"
                android:id="@+id/tableRow3"
                android:paddingLeft="4pt"
                android:paddingRight="4pt">
                <Button
                    android:background="#f91602"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/buttonClear"
                    android:textSize="14pt"
                    android:id="@+id/buttonClear"
                    android:layout_width="25pt"
                    android:layout_height="25pt"
                    android:layout_weight="1"
                    android:onClick="handleClick" />
                <Button
                    android:background="#dc8f3c"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/buttonZero"
                    android:textSize="14pt"
                    android:id="@+id/button0"
                    android:layout_height="25pt"
                    android:layout_width="25pt"
                    android:layout_weight="1"
                    android:onClick="handleClick" />
                <Button
                    android:background="#e6c510"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/buttonResult"
                    android:textSize="14pt"
                    android:id="@+id/buttonResult"
                    android:layout_width="25pt"
                    android:layout_height="25pt"
                    android:layout_weight="1"
                    android:onClick="handleClick" />
                <Button
                    android:background="#f17f05"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/buttonPlus"
                    android:textSize="14pt"
                    android:id="@+id/buttonPlus"
                    android:layout_width="25pt"
                    android:layout_height="25pt"
                    android:layout_weight="1"
                    android:onClick="handleClick" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp">
        <Button
            android:id="@+id/developarAboutId"
            android:textAllCaps="false"
            android:padding="5dp"
            style="@style/TextAppearance.AppCompat.Large"
            android:background="#ed9212"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="About Devolapar"/>
    </LinearLayout>


</LinearLayout>